Client profil zavrsen, cors popravljen, change password,